[project]
name = "test_hello"
version = "0.0.1"
authors = [
    {name="Nikhil Sasi Rajan", email="nsasiraj@umd.edu"}
]
description = "testing hellos"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3"
dependencies = []
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

[project.urls]
repository = "https://github.com/nikhilsrajan/test_hello"